--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -11,7 +11,9 @@
   <title>AirBnB Clone</title>
 </head>
 <body>
-  <header></header>
+  <header>
+    <div class="icon"></div>
+  </header>
   <footer>
     <p>Holberton School</p>
   </footer>
